--- a/index.html
+++ b/index.html
@@ -1,74 +1,12 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>The Portfolio of Keith Knox</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script src="js/script.js"></script>
-      <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
-        <div class= "main">
-            <h1>Keith Knox</h1>
-            <p>Web Developer</p>
-            <nav>
-                <ul>
-                    <li class = "aboutLink">About Me</li>
-                    <li class = "projectLink">Projects</li>
-                    <li class = "contactLink">Contact</li>
-                </ul>
-            </nav>
-          </div>
-
-        <div id= "about">
-          <h1>About Me</h1>
-          <img src = "img/headshot1.jpg" alt="bw photo">
-            <div class="text">
-              <p>I am a former payroll accountant looking to make the leap into full stack web development. I graduated General Assembly's Web Development Immersive in June 2015. </p>
-          </div>
-        </div>
-
-        <div id="projects">
-          <h1>Projects</h1>
-          <img src = "img/arrow-left.png" alt = "prev" id = "prev">
-          <div id = "slider">
-              <div class = "slide">
-                  <div class = "slide-copy">
-                    <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank"><img src = "img/invisibleillness.png" alt = "Prev"></a>
-                      <h2>Invisible Illness</h2>
-                      <p>A group effort combining 3 developers and one designer from the General Assembly User Experience class, the focus of the project was to tell the stories of people with invisible illnesses. Users could post personal stories, find links for more information and even contribute to a charity if they wished to do so.  This was before learning javascript and therefore I had to take the designer&#8217s proofs and create a front-end using solely CSS layouts and animation.  I am proud of this project because the team worked well together and met the "client's" expectations with the minimal front-end experience we had at that time.</p>
-                  </div>
-                </div>
-
-              <div class = "slide">
-                  <div class = "slide-copy">
-                    <a href = "https://pacific-plains-7067.herokuapp.com/" target="_blank"><img src = "img/vineyard.png" alt = "Prev"></a>
-                      <h2>Vineyard Itinerary</h2>
-                      <p>Creating a map of vineyards in the Shenandoah Valley was my third project for General Assembly. Using both the Google Maps and Yelp APIs, the goal of the site was to allow users to add entries from the Yelp API to a Google map and create a custom wine tour.  Though the Google Maps portion proved to be a little difficult with the deadline given, I was able get a deeper understanding of the Yelp API using the "bounding box" function since the Shenandoah Valley is not a metropolitan area.  This project definitely aided in my overall comprehension of APIs.</p>
-                  </div>
-              </div>
-
-              <div class = "slide">
-                  <div class = "slide-copy">
-                    <a href = "https://lit-bayou-1476.herokuapp.com/" target="_blank"><img src = "img/cookbook.png" alt = "Prev"></a>
-                      <h2>Keith's Cookbook</h2>
-                      <p>My final project for General Assembly, a Ruby on Rails app that enables users to upload and comment on recipes.  This was my first time implementing AJAX and jQuery on a project as well as experimenting with the Materialize CSS framework. The AJAX functionality can be seen when you add comments to the recipes without a page reload. Though not as robust as other websites, I am very proud of this app and shows how far I have come since starting General Assembly in March.</p>
-                  </div>
-              </div>
-        </div>
-          <img src = "img/arrow-right.png" alt = "next" id = "next">
-      </div>
-
-        <div id="contacts">
-          <h1>Contact</h1>
-          <br>
-          <ul>
-            <li><a href = "https://github.com/keithknox" class = "btn" target="github">My Github Account</a></li>
-            <li><a href = "https://www.linkedin.com/in/keithwknox" class="btn" target = "linkedin">My Linkedin Profile</a></li>
-            <li><a href = "https://twitter.com/KeithKnoxKnox" class="btn" target="twitter">My Twitter Profile</a></li>
-            <li><a href="mailto:keithwknox@gmail.com?Subject=Hello" class="btn" >Send me an email</a></li>
-          </ul>
-        </div>
-    </body>
-  </html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  Welcome to my revised portfolio!
+</body>
+</html>
