Added 'Coming Soon'

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  Welcome to my revised portfolio 2.0!
+  Coming soon...Welcome to my revised portfolio 2.0!
 </body>
 </html>
