created grid layout with main and navbar sections.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  Coming soon...Welcome to my revised portfolio 2.0!
+  <main>
+    <h1>Keith Knox</h1>
+    <h3>Web Developemt</h3>    
+  </main>
+    <nav>
+      <ul>
+        <li>About | </li>
+        <li>Projects | </li>
+        <li>Blog</li>
+      </ul>
+    </nav>
 </body>
 </html>
