added animations for title and navbar. updated font for title.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
   <main>
-    <h1>Keith Knox</h1>
-    <h3>Web Developemt</h3>    
+    <div class="fade-in-text-1">
+      <h1>Keith Knox</h1>
+    </div>
+    <div class="fade-in-text-2">
+      <h3>Web Development</h3>
   </main>
     <nav>
       <ul>
-        <li>About | </li>
-        <li>Projects | </li>
+        <li>About</li>
+        <li>Projects</li>
         <li>Blog</li>
       </ul>
     </nav>
